--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    //parte de la practica de data binding
+    buildFeatures {
+        dataBinding true
+    }
+
 }
 
 dependencies {
